style.css
/* ... */
.icons-reseaux {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin-top: 15%;
}
.icons-reseaux > a:hover {
    transform: scale(1.1);
    transition-duration: 300ms;
}

.icons-reseaux > a > img {
    height: 100%;
    max-height: 245px;
    width: 100%;    
}

.icons-reseaux > a {
    height: 12%;
    max-height: 245px;
    width: 12%;
    margin: 7px;
}

.right-side-landing-page > h3 {
    font-size: 400%;
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 800;
    font-style: normal;
    text-align: right;
    color: rgb(235, 177, 103);
}



/*          #######################################################
            #######################################################
            ########                ACCEUIL                 #######
            #######################################################
            ####################################################### */


.acceuil {
    height: fit-content;
    max-height: 100vh;
    width: auto;
    padding: 2%;
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    background-color: #f0a606;
    border-bottom: 1px solid black;
}

.acceuil > h2 {
    padding: 3%;
    font-family: "Rubik Mono One", monospace;
    font-weight: 400;
    font-style: normal;
    color: rgb(151, 7, 7);
    text-decoration: underline;  
}

.introduction {
    width: 70%;
    padding-left: 3%;
    padding-right: 3%;
    text-align: justify;
    font-size: 130%;
    color: rgb(151, 7, 7);
    font-weight: 600;
    line-height: 37px;
}

.introduction > p > span {
    color: #f0a606;
}

.container-line1 {
    display: flex;
    align-items: center;
    justify-content: space-around;
    margin-bottom: 15px;
    padding-bottom: 25px;
    border-bottom: 1px solid rgb(151, 7, 7) ;
}

.container-line1 > img {
    width: 30%;
    max-width: 450px;
    border-radius: 15px;
    margin-right: 2%;
    margin-left: 2%;
    border: 2px solid salmon;
    box-shadow: 2px 2px 8px black;
}

.philosophie {
    width: 70%;
    padding-left: 3%;
    padding-right: 3%;
    text-align: justify;
    font-size: 130%;
    color: rgb(151, 7, 7);
    font-weight: 600;
    line-height: 37px;
}

.container-line2 {
    display: flex;
    align-items: center;
    justify-content: space-around;
    margin-top: 15px;
    padding-top: 15px;
}

.container-line2 > img {
    width: 30%;
    max-width: 450px;
    border-radius: 15px;
    margin-right: 2%;
    margin-left: 2%;
    border: 2px solid salmon;
    box-shadow: 2px 2px 8px black;
}



/*          #######################################################
            #######################################################
            ########                 CARTE                  #######
            #######################################################
            ####################################################### */


.carte {
    height: 100vh;
    width: auto;
    padding: 2%;
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    background-color: antiquewhite;
    border-bottom: 1px solid black;
    display: flex;
    flex-direction: column;
    align-items: center;
}


.carte > h2 {
    padding: 3%;
    font-family: "Rubik Mono One", monospace;
    font-weight: 400;
    font-style: normal;
    color: rgb(151, 7, 7);
    text-decoration: underline;  
    display: flex;
    justify-content: flex-start;
}

.la-carte > p {
    width: 85%;
    padding-left: 3%;
    padding-right: 3%;
    text-align: center;
    font-size: 120%;
    color: rgb(151, 7, 7);
    font-weight: 600;
    line-height: 37px;
}

.la-carte > h4 {
    font-size: 120%;
    color: rgb(151, 7, 7);
    font-weight: 600;
    text-decoration: underline;
    line-height: 37px;
    margin: 3%;
}

.caroussel {
    width: 100%;
    height: 60vh;
    background-color: rgb(235, 203, 161);
    border: 1px solid salmon;
    border-radius: 15px;
    box-shadow: 8px 8px 16px gray;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.img-container {
    width: 95%;
    display: flex;
    align-items: center;
    overflow-x: auto;
    scrollbar-width: none;
    mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
    mask-repeat: no-repeat;
    mask-size: 100% 100%; 
}

.img-container > img:hover {
  transform: scale(1.10);
  box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.4);
}

.img-container > img {
    width: 30%;
    display: flex;
    align-items: center;
    margin: 20px;
    border-radius: 15px;
    border: 1px solid gray;
    box-shadow: 2px 2px 6px rgb(68, 68, 68);
    transition-duration: 500ms;
}


/*          #######################################################
            #######################################################
            ########               BOISSONS                 #######
            #######################################################
            ####################################################### */


.boissons {
    height: 100vh;
    width: auto;
    padding: 2%;
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    background-color: #f0a606;
    border-bottom: 1px solid black;
    display: flex;
    flex-direction: column;
    align-items: center;

}

.header-boisson{
    width: 80%;
}

.header-boisson > h2 {
    padding: 3%;
    width: 80%;
    font-family: "Rubik Mono One", monospace;
    font-weight: 400;
    font-style: normal;
    color: rgb(151, 7, 7);
    text-decoration: underline;  
    display: flex;
    justify-content: flex-start;
}
/* ... */

